<resources>

    <!-- Технические -->
    <string name="telegram_channel_name">quotemuse</string>

    <string name="telegram_channel_uri">tg://resolve?domain=</string>
    <string name="telegram_app_not_found">Приложение Telegram не найдено на устройстве!</string>

    <string name="play_market_app_http_link">https://play.google.com/store/apps/details?id=</string>
    <string name="play_market_app_link">market://details?id=</string>
    <string name="tell_about_app_title">Рассказать о приложении</string>

    <!-- Реклама -->
    <string name="ads_app_id">ca-app-pub-5449253846737836~3312376789</string>
    <string name="device_id_test">7FE03AE2B40677A6643CDC9F76B378FC</string>

    <string name="ads_simple_banner_id">ca-app-pub-5449253846737836/8259535410</string>
    <string name="ads_simple_banner_id_test">ca-app-pub-3940256099942544/6300978111</string>

    <string name="ads_fullscreen_banner_id">ca-app-pub-5449253846737836/6488703104</string>
    <string name="ads_fullscreen_banner_id_test">ca-app-pub-3940256099942544/1033173712</string>
    <integer name="ads_fullscreen_banner_show_period">3</integer>

    <string name="adb_disable_dialog_title">Отключить рекламу?</string>
    <string name="adb_disable_dialog_positive">Отключить</string>
    <string name="adb_disable_dialog_neutral">Не сейчас</string>

    <!-- fabric.io key -->
    <string name="fabric_io_key">b084a5fe6f1774820fee9a78dd1fdef5101fff2d</string>

    <!-- открытый ключ приложения для покупок -->
    <string name="APP_GOOGLE_RSA_PUBLIC_KEY">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAjFfwGosO5fHf/y/czCUJXOfG550OZiugYePEkDNyA/i3n4+/QA+jU44gV9d4q/XDWBN/ypAEGpWB3SnGqiqYpzjKfh2q5IIpXSIlg8Q37lUw6RYTm6MQuPn6tGIYkCmdIp3RkJDjYjSpytZOtYpT01cWQLyGDPSkyW4ijIIFk7ARWVKrhfK1K2cnAmLzXY+A47xr1qYZEeI2B8lCUm+W8qgtmhUTEqwRYNcQgWHFgZnSSANMoO7PPaBTC7kOnPNWhOVA9OVgMy4tUYQLmAmFpHveAgzZPy4xeWtQYyUiC3TCxHruFQETUAU2rfKWVTJV85T3OOYxtgt8Gm9iWVtPywIDAQAB</string>

    <!-- Покупки -->
    <array name="inapp_products">
        <item>quote_widget</item>
        <item>quote_adb</item>
        <item>quote_dev_ty</item>
    </array>

    <string name="purchase_already_do_detail">Покупка «%s» уже совершена!</string>

    <string name="purchase_empty_list">Список покупок временно недоступен. Проверьте подключение к сети интернет или перезапустите приложение.</string>

    <!-- Виджет -->
    <string name="widget_update_info">Подбираем для вас цитату…</string>
    <string name="widget_not_purchase">Для просмотра цитат с помощью виджета необходимо перейти в приложение, раздел покупки и приобрести виджет!</string>
    <string name="widget_update_error">Произошла ошибка, попробуйте пересоздать виджет!</string>

    <!-- Меню -->
    <string name="nav_title">Цитаты великих людей</string>

    <!-- Приложение -->
    <string name="app_name">Цитаты</string>
    <string name="navigation_drawer_open">Открыть меню</string>
    <string name="navigation_drawer_close">Закрыть меню</string>

    <string name="dev_author_name">Разработчик</string>

    <string name="app_update_available_title">Обновить приложение?</string>
    <string name="app_update_available_desc">В новой версии доступны улучшения и исправлены различные ошибки. Обновите приложение для корректной работы!</string>
    <string name="app_update_yes_text">Обновить</string>
    <string name="app_update_pass_text">Не сейчас</string>

    <!-- Меню -->
    <string name="random_title">Случайные</string>
    <string name="category_title">Категории</string>
    <string name="author_title">Авторы</string>
    <string name="like_title">Избранные</string>

    <string name="menu_item_others">Другое</string>
    <string name="menu_item_purchase">Покупки</string>
    <string name="menu_item_telegram_channel">Telegram канал</string>
    <string name="menu_item_share">Поделиться</string>
    <string name="menu_item_rate_app">Оценить приложение</string>

    <!-- Поиск -->
    <string name="author_search_hint">Поиск</string>
    <string name="category_search_hint">Поиск</string>

    <!-- Диалоги отправки контента -->
    <string name="share_quote_dialog_title">Поделиться цитатой</string>

    <string name="author_unknown_name">Автор не известен</string>

    <!-- not full quote info warning message -->
    <string name="connect_off_message">Для корректной работы приложения необходимо подключение к сети интернет!</string>
    <string name="not_full_quotes_message">Для полного списка цитат необходимо подключение к сети интернет!</string>
    <string name="not_full_authors_message">Для полного списка авторов необходимо подключение к сети интернет!</string>
    <string name="not_full_categories_message">Для полного списка категорий необходимо подключение к сети интернет!</string>

    <string name="empty_liked_message">Здесь будут появляться ваши избранные цитаты</string>

    <!-- Ошибки -->
    <string name="quote_like_error">Произошла ошибка, попробуйте повторить действие позже</string>
    <string name="load_message">Загрузка...</string>

</resources>
