<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_random_quote"
            android:icon="@drawable/random"
            android:title="@string/random_title" />
        <item
            android:id="@+id/navigation_author_list"
            android:icon="@drawable/author"
            android:title="@string/author_title" />
        <item
            android:id="@+id/navigation_category_list"
            android:icon="@drawable/category"
            android:title="@string/category_title" />
        <item
            android:id="@+id/navigation_liked_list"
            android:icon="@drawable/ic_menu_like"
            android:title="@string/like_title" />
    </group>

    <item android:title="@string/menu_item_others">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/navigation_purchase_list"
                    android:icon="@drawable/ic_menu_purchase"
                    android:title="@string/menu_item_purchase" />
            </group>
            <item
                android:id="@+id/nav_item_telegram_channel"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_item_telegram_channel" />
            <item
                android:id="@+id/nav_item_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_item_share" />
            <item
                android:id="@+id/nav_item_rate_app"
                android:icon="@drawable/ic_rate"
                android:title="@string/menu_item_rate_app" />
        </menu>
    </item>

</menu>
